# dc-cli

./: .env.sample  .gitignore  ChangeLog  Dockerfile  INSTALL.rst  Pipfile  README.rst  conftest.py  requirements.txt  setup.cfg  setup.py
dc_cli/: __init__.py  challenge.py  collections.py  constants.py  experiment.py  experiment_design.py  extended.py  file.py  identifier.py  job.py  job_event.py  job_product.py  main.py  measurement.py  member.py  pipeline.py  sample.py  structured_request.py  tag.py  tag_create.py  tag_link.py  tag_publish.py  tapis.py  text.py  text_create.py  token.py  utils.py  version.py
dc_cli/api/: __init__.py  agave.py  constants.py  mongo.py  pipelinejobs.py  record.py  utils.py
dc_cli/linkedstore/: __init__.py  base.py  challenge.py  experiment.py  experiment_design.py  file.py  job.py  job_event.py  measurement.py  member.py  pipeline.py  sample.py  structured_request.py
dc_cli/manager/: identifier.py
dc_cli/search/: __init__.py  argument.py  searchmods.py  searchtypes.py
dc_cli/settings/: __init__.py  organization.py
dc_cli/tapis/: __init__.py
docs/: conf.py  contents.rst
docs/_build/doctrees/: contents.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  contents.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_static/: documentation_options.js
tests/: __init__.py  options.py  test_001_mongodb_conn.py  test_003_tapis_client.py
tests/fixtures/: __init__.py  agave.py  mongodb.py  token.py
