[metadata]
name = dc_cli
summary = A command-line interface for SD2E Data Catalog
description-file = README.rst
author = Matthew Vaughn
author-email = opensource@tacc.cloud
home-page = https://github.com/SD2E/dc-cli
license = LICENSE.txt
keywords = datacatalog
zip_safe = False

[files]
packages = dc_cli

[entry_points]
console_scripts =
    dcat=dc_cli.main:main
dc.cli =
    version = dc_cli.version:Version
    token_get = dc_cli.token:TokenGenerate
    id_show = dc_cli.identifier:IdentifiedRecordShow
    challenge_list = dc_cli.challenge:ChallengeList
    challenge_show = dc_cli.challenge:ChallengeShow
    design_list = dc_cli.experiment_design:ExperimentDesignList
    design_show = dc_cli.experiment_design:ExperimentDesignShow
    experiment_list = dc_cli.experiment:ExperimentList
    experiment_show = dc_cli.experiment:ExperimentShow
    sample_list = dc_cli.sample:SampleList
    sample_show = dc_cli.sample:SampleShow
    measurement_list = dc_cli.measurement:MeasurementList
    measurement_show = dc_cli.measurement:MeasurementShow
    file_list = dc_cli.file:FileList
    file_show = dc_cli.file:FileShow
    file_get = dc_cli.file:FileGet
    pipeline_list = dc_cli.pipeline:PipelineList
    job_list = dc_cli.job:JobList
    job_show = dc_cli.job:JobShow
    job_history_show = dc_cli.job:JobHistoryShow
    job_event_send = dc_cli.job_event:JobEventSend
# atmosphere.cli.volume_delete =
#     delete_hook = atmosphere.hooks.delete_hook:DeleteHook
# atmosphere.cli.instance_delete =
#     delete_hook = atmosphere.hooks.delete_hook:DeleteHook
distutils.commands =
# behave_test = setuptools_behave:behave_test

# [cmdclass]
# behave_test = behave_test

# [behave_test]
# format = progress
# tags = -@xfail
# args = features

[pbr]
autodoc_tree_index_modules = False
autodoc_tree_excludes = setup.py

[build_sphinx]
builders = html,man
all-files = 1
source-dir = docs
build-dir = docs/_build

[wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose --cov dc_cli --cov-report xml --junit-xml pytest.xml

# [bdist_wheel]
# universal = 1

# [flake8]
# statistics = true
# max-line-length = 120
# ignore =
# # Allow module-level imports after syspath bashing
# E402
# # Allow unused imports
# F401
# # Allow <2 Blank lines
# E302
# # Futile assignments allowed
# F841
# # Don't force two lines between functions
# E305
# exclude = .git,__pycache__,.hypothesis,build,dist

# [coverage:run]
# source=dc/*
# omit=.tox,tests,
# plugins=

# [tool:pytest]
# norecursedirs =
# testpaths = tests
# addopts =
# --cache-clear
# --flake8
# --verbose
# --cov=syd --cov-config setup.cfg
