[metadata]
name = dc_cli
summary = A command-line interface for SD2E Data Catalog
description-file = README.rst
author = Matthew Vaughn
author-email = opensource@tacc.cloud
home-page = https://github.com/SD2E/dc-cli
license = LICENSE.txt
keywords =
    datacatalog
zip_safe = False

[files]
packages =
    dc_cli

[entry_points]
console_scripts =
    dcat = dc_cli.main:main
dc.cli =
    version = dc_cli.version:Version
    token_get = dc_cli.token:TokenGenerate
    id_show = dc_cli.identifier:IdentifiedRecordShow
    challenges_list = dc_cli.challenge:ChallengeList
    challenge_show = dc_cli.challenge:ChallengeShow
    designs_list = dc_cli.experiment_design:ExperimentDesignList
    design_show = dc_cli.experiment_design:ExperimentDesignShow
    requests_list = dc_cli.structured_request:StructuredRequestList
    request_show = dc_cli.structured_request:StructuredRequestShow
    experiments_list = dc_cli.experiment:ExperimentList
    experiment_show = dc_cli.experiment:ExperimentShow
    samples_list = dc_cli.sample:SampleList
    sample_show = dc_cli.sample:SampleShow
    measurements_list = dc_cli.measurement:MeasurementList
    measurement_show = dc_cli.measurement:MeasurementShow
    files_list = dc_cli.file:FileList
    file_show = dc_cli.file:FileShow
    file_get = dc_cli.file:FileGet
    pipelines_list = dc_cli.pipeline:PipelineList
    jobs_list = dc_cli.job:JobList
    job_show = dc_cli.job:JobShow
    job_events_list = dc_cli.job:JobHistoryShow
#    job_event_show = dc_cli.job:JobHistoryItemShow
    job_event_send = dc_cli.job_event:JobEventSend
#    job_outputs_list = dc_cli.job_event:JobOutputsList

# atmosphere.cli.volume_delete =
#     delete_hook = atmosphere.hooks.delete_hook:DeleteHook
# atmosphere.cli.instance_delete =
#     delete_hook = atmosphere.hooks.delete_hook:DeleteHook
distutils.commands =
# behave_test = setuptools_behave:behave_test

# [cmdclass]
# behave_test = behave_test

# [behave_test]
# format = progress
# tags = -@xfail
# args = features

[pbr]
autodoc_tree_index_modules = False
autodoc_tree_excludes = setup.py

[build_sphinx]
builders = html,man
all-files = 1
source-dir = docs
build-dir = docs/_build

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
; addopts = --verbose --cov dc_cli --cov-report xml --junit-xml pytest.xml
addopts = --verbose

# [flake8]
# statistics = true
# max-line-length = 120
# ignore =
# # Allow module-level imports after syspath bashing
# E402
# # Allow unused imports
# F401
# # Allow <2 Blank lines
# E302
# # Futile assignments allowed
# F841
# # Don't force two lines between functions
# E305
# exclude = .git,__pycache__,.hypothesis,build,dist

# [coverage:run]
# source=dc/*
# omit=.tox,tests,
# plugins=

# [tool:pytest]
# norecursedirs =
# testpaths = tests
# addopts =
# --cache-clear
# --flake8
# --verbose
# --cov=syd --cov-config setup.cfg
